[package]
name = "claude-code-sdk"
version = "0.0.10"
edition = "2021"
description = "Rust SDK for Claude Code"
license = "MIT"
authors = ["Anthropic <support@anthropic.com>"]
repository = "https://github.com/anthropics/claude-code-sdk-rust"
documentation = "https://docs.anthropic.com/en/docs/claude-code/sdk"
keywords = ["claude", "ai", "sdk", "anthropic"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
which = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[lib]
name = "claude_code_sdk"
path = "src/lib.rs"